# amep

backend/: .gitignore  CMakeLists.txt
backend/Website/: consultCommunities.html  createCommunity.html  deleteNeighbor.html  login.html  profileMenu.html  publishService.html  register.html  service.html  userDeleted.html
backend/Website/community/: admin.html  services.html
backend/Website/css/: acceptService.css  consultCommunities.css  createCommunity.css  deleteNeighbor.css  login.css  profileMenu.css  publishService.css  register.css  service.css  services.css
backend/Website/js/: cookies.js
backend/src/: connection.cpp  connection.h  finderAccepted.cpp  finderAccepted.h  finderAdmin.cpp  finderAdmin.h  finderCommunity.cpp  finderCommunity.h  finderNeighbor.cpp  finderNeighbor.h  finderPartOf.cpp  finderPartOf.h  finderPendingService.cpp  finderPendingService.h  finderService.cpp  finderService.h  finderTask.cpp  finderTask.h  finderUserAcceptedServices.cpp  finderUserAcceptedServices.h  finderUserPendingServices.cpp  finderUserPendingServices.h  main.cpp  passAcceptService.cpp  passAcceptService.h  passAdmin.cpp  passAdmin.h  passCommunity.cpp  passCommunity.h  passNeighbor.cpp  passNeighbor.h  passPartOf.cpp  passPartOf.h  passService.cpp  passService.h  presentationLayer.cpp  presentationLayer.h  requests.cpp  requests.h  txAcceptService.cpp  (+57 more)
frontend/SwarviceWeb/: index.html  vite.config.js
frontend/SwarviceWeb/src/: App.css  App.jsx  Pagina.css  Pagina.jsx  consultCommunities.module.css  index.css  login.html  pallette.css
(+62 files in other folders)
